@@ -239,6 +239,7 @@ void owl_keys_setup_keymaps(owl_keyhandler *kh) {
   BIND_CMD("C-l",       "redisplay",       "");
 
   BIND_CMD("i",   "info",             "");
+  BIND_CMD("l",   "zlist",            "");
   BIND_CMD("M",   "pop-message",      "");
   BIND_CMD("T",   "delete trash",     "mark all 'trash' messages for deletion");
 
